2004-10-17  Don Allingham  <dallingham@users.sourceforge.net>
	* src/EditPerson.py: saving grouping name, instead of surname for
	updating of the person list
	* src/ReadGedcom.py: save person and source as soon as created
	* src/gramps_main.py: compare updates based off grouping name 
	instead of surname

2004-10-17 Julio Sanchez <julio.sanchez@gmail.com>
	* src/plugins/rel_es.py: Correct levels.

2004-10-16  Don Allingham  <dallingham@users.sourceforge.net>
	* src/ReadGedcom.py: allow default when selecting override, add
	the place properly on import
	* src/gedcomimport.glade: allow default when selecting override
	* src/gramps_main.py: don't lose track of active person after
	a cancelled Add Person
	* src/PeopleView.py: handle changing of surnames if the surname
	needs to be removed from the list

2004-10-15  Don Allingham  <dallingham@users.sourceforge.net>
	* src/GrampsBSDDB.py: increase cachesize
	* src/ReadGedcom.py: increment source count
	* src/gedcomimport.glade: increment source count
	* src/DateDisplay.py: handle BC
	* src/DateParser.py: handle BC
	* src/GrampsInMemDB.py: handle missing handles in find functions
	* src/ReadGedcom.py: handle BC
	* src/WriteGedcom.py: handle BC
	* src/ReadXML.py: handle BC
	
2004-10-13  Don Allingham  <dallingham@users.sourceforge.net>
	* src/docgen/OpenOfficeDoc.py: incorporated Julio Sanchez's
	language patch

2004-10-13 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/Makefile.am: Ship rel_es.py plugin.
	* src/rule.glade: Clean up the filter definition dialog.

2004-10-13 Julio Sanchez <julio.sanchez@gmail.com>
	* src/plugins/rel_es.py: Add to CVS.

2004-10-12  Don Allingham  <dallingham@users.sourceforge.net>
	* src/DisplayModels.py: fix source display
	* src/GrampsBSDDB.py: add abort_changes task
	* src/GrampsDbBase.py: add abort_changes task
	* src/GrampsInMemDB.py: add abort_changes task
	* src/Makefile.am: Add target to build documentation using epydoc