@@ -1,3 +1,7 @@
+2004-10-18 Alex Roitman  <shura@alex.neuro.umn.edu>
+	* src/docgen/OpenSpreadSheet.py (write_text): Escape special
+	XML characters.
+
 2004-10-17  Don Allingham  <dallingham@users.sourceforge.net>
 	* src/EditPerson.py: saving grouping name, instead of surname for
 	updating of the person list
